--- a/style.css
+++ b/style.css
@@ -147,7 +147,6 @@ header{
   display: flex;
   flex-direction: row;
   justify-content: center;
-  flex-wrap: wrap;
   gap: 200px;
   align-items: center;
   margin-top: 100px;
@@ -236,14 +235,15 @@ header{
 /* Responsive Mobile */
 @media(max-width: 768px) {
   .hero-section{
+    flex-direction: column;
     gap: 40px;
     justify-content: space-around;
     width: 100%;
-    margin-top: 30px;
+    margin-top: 5px;
   }
 
   .hero-introduction{
-    width: 250px;
+    width: 400px;
   }
   .hero-introduction h1{
     font-size: clamp(2rem, 6vw, 50px);
@@ -297,7 +297,7 @@ header{
     gap: 20px;
     height: 400px;
     justify-content: flex-start;
-    margin-bottom: 500px;
+    margin-bottom: 750px;
   }
 
   .education-section h1{
@@ -325,18 +325,19 @@ header{
   font-size: clamp(2rem, 5vw, 40px);
   font-family: "Abril Fatface";
   flex: 0 0 100%;
+  font-weight: 400;
 }
 
 .skills-section h3{
- font-size: 25px;
- font-weight: 400;
+ font-size: clamp(1rem, 3vw, 25px);
+ font-weight: 500;
  text-transform: uppercase;
  color: var(--ivory);
 }
 
 .coding-languages i{
   gap: 1rem;
-  font-size: 40px;
+  font-size: clamp(2rem, 3vw, 40px);
   align-items: center;
   margin-bottom: 20px;
 }
@@ -360,15 +361,15 @@ header{
 
 .softwares img{
   width: 40px;
-
 }
+
 @media(max-width: 768px) {
   .skills-section {
-    margin-top: 20px;
+    margin-top: 10px;
     position: relative;
     display: flex;
+    justify-content: center;
     flex-wrap: wrap;
-    justify-content: space-around;
     width: 100%;
     margin-left: 0;
   }
@@ -377,11 +378,16 @@ header{
     flex: 0 0 100%;
     margin-bottom: 0.5rem;
     text-align: center;
+    white-space: nowrap
   }
   .skills-section h3{
     color: black;
   }
 
+  .skills-section div{
+    display: flex;
+    gap: 30px;
+  }
 }
 
 .resume{
@@ -401,7 +407,8 @@ header{
 
 @media(max-width: 768px){
   .resume{
-    display: none;
+    left: 40px;
+    top: -300px;
   }
 }
 /* Experience section */
@@ -440,7 +447,7 @@ header{
     position: relative;
     bottom: 0;
     left: -80px;
-    width: 400px;
+    width: 300px;
   }
 }
 
@@ -566,8 +573,11 @@ header{
 }
 
 @media (max-width: 768px){
+  .projects-card{
+    grid-template-columns: 1fr;
+  }
    .presentation-section .projects-card{
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr;
   }
 }
 
